added ESP32-SOLO1 platform

--- a/knx-led-tunable-dimmable/platformio.ini
+++ b/knx-led-tunable-dimmable/platformio.ini
@@ -68,3 +68,35 @@ upload_port = 192.168.0.60
 ;  -DKNX_NO_SPI
 ;  -DKNX_FLASH_OFFSET=0x1DB000 ; begin of beken userdata
 ;  -Dbk7231n="bk7231n"
+
+
+
+; ======================
+; ESP32 Solo1 – seriell
+; ======================
+
+[env:esp32solo1serial]
+board = esp32dev
+monitor_speed = 115200
+framework = arduino
+; Solo1-spezifische Platform + Framework (Tasmota-Forks)
+platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.2.3/platform-espressif32-2.0.2.3solo1.zip
+platform_packages =
+  framework-arduinoespressif32 @ https://github.com/tasmota/arduino-esp32/releases/download/1.0.7.5/tasmota-arduinoespressif32-solo1-release_v3.3.5.tar.gz
+; falls du Unicore explizit setzen willst:
+build_flags =
+  ${env.build_flags}
+  -DCONFIG_FREERTOS_UNICORE=1
+
+[env:esp32solo1ota]
+board = esp32dev
+framework = arduino
+monitor_speed = 115200
+platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.2.3/platform-espressif32-2.0.2.3solo1.zip
+platform_packages =
+  framework-arduinoespressif32 @ https://github.com/tasmota/arduino-esp32/releases/download/1.0.7.5/tasmota-arduinoespressif32-solo1-release_v3.3.5.tar.gz
+build_flags =
+  ${env.build_flags}
+  -DCONFIG_FREERTOS_UNICORE=1
+upload_protocol = espota
+upload_port     = 192.168.0.80    ; IP anpassen
