changed partition table

--- a/knx-led-tunable-dimmable/platformio.ini
+++ b/knx-led-tunable-dimmable/platformio.ini
@@ -1,12 +1,8 @@
 ; Gemeinsame PlatformIO-Einstellungen
 [platformio]
-; Passe den Pfad bei Bedarf an: ../libraries oder ../../libraries
 lib_dir = ../libraries
-;optional:
 default_envs = esp32serial
 
-
-; Gemeinsame Defaults für alle Environments
 [env]
 build_flags =
   -DMASK_VERSION=0x57B0
@@ -14,10 +10,66 @@ build_flags =
   -Wno-unknown-pragmas
 
 
+; ============================================================
+; ESP32 – gemeinsame Basis (Partitionen + OTA Max Size zentral)
+; ============================================================
+[env:esp32_base]
+platform = espressif32
+framework = arduino
+monitor_speed = 115200
+
+; gilt für ALLE ESP32 Environments, die extends benutzen
+board_build.partitions = partitions/app2.csv
+board_upload.maximum_size = 2031616
+
+build_flags =
+  ${env.build_flags}
+
+
+; ======================
+; ESP32 – DevKit (normal)
+; ======================
+[env:esp32serial]
+extends = env:esp32_base
+board = esp32dev
+;upload_port = COM3
+
+[env:esp32ota]
+extends = env:esp32_base
+board = esp32dev
+upload_protocol = espota
+upload_port = 192.168.1.144
+
+
+; ======================
+; ESP32 Solo1 – seriell
+; ======================
+[env:esp32solo1serial]
+extends = env:esp32_base
+board = esp32dev
+
+; Solo1-spezifische Platform + Framework (Tasmota-Forks)
+platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.2.3/platform-espressif32-2.0.2.3solo1.zip
+platform_packages =
+  framework-arduinoespressif32 @ https://github.com/tasmota/arduino-esp32/releases/download/1.0.7.5/tasmota-arduinoespressif32-solo1-release_v3.3.5.tar.gz
+
+build_flags =
+  ${env:esp32_base.build_flags}
+  -DCONFIG_FREERTOS_UNICORE=1
+
+
+; ======================
+; ESP32 Solo1 – OTA
+; ======================
+[env:esp32solo1ota]
+extends = env:esp32solo1serial
+upload_protocol = espota
+upload_port = 192.168.0.80    ; IP anpassen
+
+
 ; ======================
 ; ESP8266 – D1 mini lite
 ; ======================
-
 ;[env:esp8266serial]
 ;platform = espressif8266
 ;framework = arduino
@@ -35,29 +87,8 @@ build_flags =
 
 
 ; ======================
-; ESP32 – DevKit
-; ======================
-
-[env:esp32serial]
-platform = espressif32
-board = esp32dev
-framework = arduino
-monitor_speed = 115200
-;upload_port = COM3
-
-[env:esp32ota]
-platform = espressif32
-board = esp32dev
-framework = arduino
-monitor_speed = 115200
-upload_protocol = espota
-upload_port = 192.168.1.144
-
-
-; ======================
 ; CBU (LibreTiny)
 ; ======================
-
 ;[env:cbu]
 ;platform = libretiny
 ;board = cbu
@@ -68,35 +99,3 @@ upload_port = 192.168.1.144
 ;  -DKNX_NO_SPI
 ;  -DKNX_FLASH_OFFSET=0x1DB000 ; begin of beken userdata
 ;  -Dbk7231n="bk7231n"
-
-
-
-; ======================
-; ESP32 Solo1 – seriell
-; ======================
-
-[env:esp32solo1serial]
-board = esp32dev
-monitor_speed = 115200
-framework = arduino
-; Solo1-spezifische Platform + Framework (Tasmota-Forks)
-platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.2.3/platform-espressif32-2.0.2.3solo1.zip
-platform_packages =
-  framework-arduinoespressif32 @ https://github.com/tasmota/arduino-esp32/releases/download/1.0.7.5/tasmota-arduinoespressif32-solo1-release_v3.3.5.tar.gz
-; falls du Unicore explizit setzen willst:
-build_flags =
-  ${env.build_flags}
-  -DCONFIG_FREERTOS_UNICORE=1
-
-[env:esp32solo1ota]
-board = esp32dev
-framework = arduino
-monitor_speed = 115200
-platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.2.3/platform-espressif32-2.0.2.3solo1.zip
-platform_packages =
-  framework-arduinoespressif32 @ https://github.com/tasmota/arduino-esp32/releases/download/1.0.7.5/tasmota-arduinoespressif32-solo1-release_v3.3.5.tar.gz
-build_flags =
-  ${env.build_flags}
-  -DCONFIG_FREERTOS_UNICORE=1
-upload_protocol = espota
-upload_port     = 192.168.0.80    ; IP anpassen
