added (optional) WiFiManager integration

--- a/knx-led-tunable-dimmable/platformio.ini
+++ b/knx-led-tunable-dimmable/platformio.ini
@@ -7,7 +7,10 @@ default_envs = esp32serial
 build_flags =
   -DMASK_VERSION=0x57B0
   -DSMALL_GROUPOBJECT
+	-DUSE_WIFIMANAGER=1			; use WiFiManager (optional) or static setup in credentials.h (costs around 80-100kB Flahs)
   -Wno-unknown-pragmas
+lib_deps =
+  tzapu/WiFiManager
 
 
 ; ============================================================
@@ -24,6 +27,9 @@ board_upload.maximum_size = 2031616
 
 build_flags =
   ${env.build_flags}
+
+lib_deps =
+  ${env.lib_deps}
 
 
 ; ======================
