switched to a more recent Tasmota core foe ESP32-SOLO-1

--- a/knx-led-universal-5ch-esp32/platformio.ini
+++ b/knx-led-universal-5ch-esp32/platformio.ini
@@ -47,31 +47,33 @@ upload_protocol = espota
 upload_port = 192.168.0.155
 
 
+[env:esp32solo1_base]
+extends = env:esp32_base
+platform = https://github.com/tasmota/platform-espressif32/releases/download/2024.05.00/platform-espressif32.zip
+board = esp32-solo1
+build_flags =
+  ${env:esp32_base.build_flags}
+  -DFRAMEWORK_ARDUINO_SOLO1
+  -DCONFIG_FREERTOS_UNICORE=1
+lib_deps =
+  ${env.lib_deps}
+
+
 ; ======================
 ; ESP32 Solo1 – seriell
 ; ======================
 [env:esp32solo1serial]
-extends = env:esp32_base
-board = esp32dev
-
-; Solo1-spezifische Platform + Framework (Tasmota-Forks)
-platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.2.3/platform-espressif32-2.0.2.3solo1.zip
-platform_packages =
-  framework-arduinoespressif32 @ https://github.com/tasmota/arduino-esp32/releases/download/1.0.7.5/tasmota-arduinoespressif32-solo1-release_v3.3.5.tar.gz
-
-build_flags =
-  ${env:esp32_base.build_flags}
-  -DCONFIG_FREERTOS_UNICORE=1
+extends = env:esp32solo1_base
+;upload_port = /dev/cu.wchusbserial1410
 
 
 ; ======================
 ; ESP32 Solo1 – OTA
 ; ======================
 [env:esp32solo1ota]
-extends = env:esp32solo1serial
+extends = env:esp32solo1_base
 upload_protocol = espota
-upload_port = 192.168.0.80    ; IP anpassen
-
+upload_port = 192.168.1.168     ; IP anpassen
 
 ; ======================
 ; ESP8266 – D1 mini lite
