added Yeelight YLDL01YL as environment

--- a/knx-led-universal-5ch-esp32/platformio.ini
+++ b/knx-led-universal-5ch-esp32/platformio.ini
@@ -75,6 +75,18 @@ extends = env:esp32solo1_base
 upload_protocol = espota
 upload_port = 192.168.1.168     ; IP anpassen
 
+
+; =============================
+; Yeelight YLDL01YL (Meteorite)
+; =============================
+[env:YLDL01YLota]
+extends = env:esp32solo1_base
+upload_protocol = espota
+upload_port = 192.168.1.168     ; IP anpassen
+build_flags =
+	${env:esp32solo1_base.build_flags}
+	-DPRODUCT=YLDL01YL
+
 ; ======================
 ; ESP8266 – D1 mini lite
 ; ======================
