added initial setups for YLDL01YL

--- a/knx-led-universal-5ch-esp32/platformio.ini
+++ b/knx-led-universal-5ch-esp32/platformio.ini
@@ -87,6 +87,16 @@ build_flags =
 	${env:esp32solo1_base.build_flags}
 	-DPRODUCT=YLDL01YL
 
+
+; =============================
+; Yeelight YLDL01YL (Meteorite)
+; =============================
+[env:YLDL01YLserial]
+extends = env:esp32solo1_base
+build_flags =
+	${env:esp32solo1_base.build_flags}
+	-DPRODUCT=YLDL01YL
+
 ; ======================
 ; ESP8266 – D1 mini lite
 ; ======================
